--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ zz_demoflow*
 business_transactions/uploaded/*
 api_actions/uploaded/*.json*
 api_actions/actions/*.json*
+custom_dashboards/*.json*
+custom_dashboards/uploaded/*.json*
