Add restui auth; Add restui authorozed call; Add role permission template json files;

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ api_actions/uploaded/*.json*
 api_actions/actions/*.json*
 custom_dashboards/*.json*
 custom_dashboards/uploaded/*.json*
+cookie.appd
