RBAC saml get/update config; save sent payload to file;

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ custom_dashboards/*.json*
 custom_dashboards/uploaded/*.json*
 cookie.appd
 rbac/restui_role_files/uploaded/*
+rbac/restui_saml_files/uploaded/*
