Bugfix - adding quotes for log message not to get trimmed off;

--- a/config.json
+++ b/config.json
@@ -61,8 +61,8 @@
   ],
   "sensitive_data": [
     {
-      "data_masking": false,
-      "data_masking_patterns": "configmyapp-prod, https://, -.*8090",
+      "data_masking": true,
+      "data_masking_patterns": "-.*8090",
       "data_masking_strategy": "exact"
     }
   ]
