Update gitignore to ignore uploaded json files; Add licene_rules uploaded dir gitkeep;

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,6 @@ api_actions/actions/*.json*
 custom_dashboards/*.json*
 custom_dashboards/uploaded/*.json*
 cookie.appd
-rbac/restui_role_files/uploaded/*
-rbac/restui_saml_files/uploaded/*
-rbac/restui_license_rules_files/uploaded/*
+rbac/restui_role_files/uploaded/*.json
+rbac/restui_saml_files/uploaded/*.json
+rbac/restui_license_rules_files/uploaded/*.json
